# re15_port

./: .gitignore  ASSET_LAYER_REWRITE.md  BYTE_TRUE_AUDIT.md  C3_RENDER_DESIGN.md  CLAUDE.md  HANDOVER.md  PORT_PROGRESS.md  RE15_COMBAT_SE_SUBSYSTEM.md  RE15_ESP_VM_OPCODES.md  RE15_FUN_CATALOG.md  RE15_FUN_COVERAGE.md  RE15_INVENTORY_SUBSYSTEM.md  RE15_KNOWLEDGE.md  RE15_SCD_OPCODES_REFERENCE.md  UNTESTED_IMPLEMENTATIONS.md  ghidra_re2_exe_V2.txt  ghidra_source_original_V2.txt  ghidra_source_re2_Leon.txt
.agent_refs/: _bright.py  (+32 more)
psx_dev/re15_reborn/: BG01.BSS  BG02.BSS  CMakeLists.txt  OBJ02.TIM  README.md  ROOM1170.RDT  SUB15.VB  iso.xml  psxtest.sh  system.cnf
psx_dev/re15_reborn/assets/: elliot.edd  elliot.emr  elliot.tim  em21.emd  idle.edd  idle.emr  main16.seq  main16.vb  main16.vh  main32.seq  main32.vb  main32.vh  room1100_bg0.bss  room1100_bg00.tim  room1100_bg01.tim  room1100_bg02.tim  room1100_bg03.bss  room1100_bg03.tim  room1100_bg04.tim  room1100_bg05.tim  room1100_bg06.tim  room1100_bg07.tim  room1100_bg08.tim  room1100_bg09.tim  room1100_bg10.tim  room1100_bg11.tim  room1100_bg12.tim  room1100_bg3.bss  room1100_bg4.bss  room1100_bg7.bss  room1140_bg02.bss  room1140_bg03.bss  room1140_bg06.bss  room1140_obj00.md1  room1140_obj00.tim  room1170_bg04.bss  room1170_bg05.bss  room1170_light.lit  room1170_msg00.msg  room1170_msg01.msg  (+42 more)
psx_dev/re15_reborn/docs/: ARCHITECTURE.md
psx_dev/re15_reborn/include/: re15_bss.h  re15_cdfs.h  re15_emd.h  re15_enemy.h  re15_engine.h  re15_game_step.h  re15_msg.h  re15_pri.h  re15_scd.h  re15_vram.h
psx_dev/re15_reborn/src/: actor_locomotion.c  aot_common.c  asset_psx.c  bss_vlc.c  enemy_common.c  game_state.c  game_step_common.c  inventory_common.c  md1_common.c  player_common.c  pri_common.c  pri_psx.c  rdt_common.c  re15_room.c  re15_to_re2.c  render.c  room_common.c  scd_vm.c  shadow_blob_psx.h  skeleton_trig_psx.c  stair_common.c  tim_common.c  vram_psx.c
psx_dev/re15_reborn/tests/: CMakeLists.txt  test_backface.c  test_bss.c  test_emd.c  test_md1.c  test_scd.c  test_skeleton.c  test_stubs.c  test_tim.c  test_vab.c
psx_dev/re15_reborn/tools/: dump_mesh8.py
psx_dev/re15_reborn_pc/: CMakeLists.txt  main.c  run_release.bat
psx_dev/re15_reborn_pc/src/: bg_pc.c  render_pc.c  room_pc.c
re15_port/: CMakeLists.txt  overlay_mapping.json  overlay_mapping.md  run_pc.ps1
re15_port/_legacy_minimal/engine_src/: bss_common.c  bss_mdec.c  bss_vlc.c  camera_common.c  collision.c  collision_sca.c  door_transition.c  io_common.c  math_common.c  rdt_common.c  room_load.c  savestate_cmp.c  scd_opcodes_aot.c  scd_vm.c
re15_port/_legacy_minimal/include/: re15_bss.h  re15_bss_mdec.h  re15_camera.h  re15_engine.h  re15_input.h  re15_io.h  re15_player.h  re15_rdt.h  re15_render.h  re15_room.h  re15_savestate.h  re15_scd.h  re15_types.h
re15_port/_legacy_minimal/platform_pc/: audio_pc.c  io_pc.c  main.c  render_pc.c
re15_port/_legacy_minimal/platform_psx/: render_psx.c
re15_port/cmake/: FindPSn00bSDK.cmake  psx_toolchain.cmake
re15_port/engine/: CMakeLists.txt
re15_port/engine/src/: actor_common.c  actor_locomotion.c  anim_select_common.c  aot_common.c  bss_common.c  bss_load.c  bss_mdec.c  camera_common.c  camera_parse.c  emd_common.c  enemy_ai_common.c  game_step_common.c  inventory_common.c  item_icon_common.c  light_common.c  mem_budget.c  menu_common.c  msg_common.c  player_common.c  rdt_common.c  re15_collision.c  re15_damage.c  re15_ems.c  re15_esp.c  re15_esp_vm.c  re15_to_re2.c  room_load.c  rotor_common.c  scd_room_setup.c  scd_vm.c  skeleton_common.c  stage_change.c  stub.c  vab_common.c
re15_port/include/: font_atlas_psx.h  font_width.h  re15_actor.h  re15_anim_select.h  re15_aot.h  re15_audio.h  re15_bg.h  re15_camera.h  re15_collision.h  re15_damage.h  re15_door.h  re15_ems.h  re15_enemy_ai.h  re15_error.h  re15_esp.h  re15_esp_vm.h  re15_inventory.h  re15_io_common.h  re15_item_icon.h  re15_light.h  re15_math.h  re15_md1.h  re15_mem.h  re15_menu.h  re15_player.h  re15_rdt.h  re15_room.h  re15_room_list.h  re15_room_spawns.h  re15_scd.h  re15_skeleton.h  re15_stair.h  re15_tim.h  re15_to_re2.h  re15_vab.h
re15_port/platform/pc/: CMakeLists.txt  main.c
re15_port/platform/pc/src/: asset_pc.c  audio_pc.c  bg_pc.c  debug_overlay.c  debug_overlay.h  input_pc.c  render_pc.c  room_pc.c  shadow_blob_data.h  skeleton_trig_pc.c
re15_port/platform/psx/: CMakeLists.txt  SYSTEM.CNF  iso.xml  main.c
re15_port/platform/psx/src/: audio_psx.c  bg_psx.c  input.c  input_psx.c  io_psx.c  mesh_psx.c  re15_cdfs.c
re15_port/shared_assets/PSX/DATA/: CORE00.ESP  MAP01.PIX  MAP02.PIX  MAP03.PIX  MAP04.PIX  MAP05.PIX  MAP06.PIX  MAP08.PIX  MAP09.PIX  MAP0A.PIX  MAP0B.PIX  MAP0D.PIX  MIXITEM.PIX  ROOM506U.SCD  SELECT.TIM  SELECTH2.TIM  TITLEJ.TIM  TITLEU.TIM.bak
re15_port/shared_assets/PSX/DOOR/: DOOR00.DO2
re15_port/shared_assets/extracted_fx/: README.md  effect0_blood.tim  effect0_clut.txt
re15_port/tests/: CMakeLists.txt  test_main.c  test_support.c
re15_port/tests/integration/: CMakeLists.txt  test_cross_stage.c  test_headless_run.c  test_room_transition.c
re15_port/tests/property/: CMakeLists.txt  prop_adpcm_decode.c  prop_bss_chunk.c  prop_case_resolve.c  prop_door_roundtrip.c  prop_fixpoint_precision.c  prop_input_edge.c  prop_json_roundtrip.c  prop_ot_sort.c  prop_point_in_poly.c  prop_rdt_filename.c  prop_rdt_null_offset.c  prop_savestate_cmp.c  prop_sca_collision.c  prop_scd_pc_advance.c  prop_spawn_entered.c  prop_tank_controls.c  prop_zone_dispatch.c
re15_port/tests/unit/: CMakeLists.txt  test_audio_vab.c  test_damage.c  test_ems.c  test_enemy_ai.c  test_esp_parse.c  test_esp_vm.c  test_item_icon.c  test_math_common.c  test_member.c  test_rdt_parser.c  test_room1140_combat.c  test_room1140_spawn.c  test_room_load.c  test_sca_parse.c  test_scd_aot_opcodes.c  test_scd_opcodes.c  test_weapon_select.c
re15_port/tools/: CMakeLists.txt  vram_png_to_tim.py
re15_port/tools/overlay_mapper/: generate_mapping.c  overlay_mapper.c
re15_port/tools/room_graph/: CMakeLists.txt  extract_doors.c  generate_graph.c
(+19620 files in other folders)
